// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translateOas3ToRequest give a request body should translate it 1`] = `
Object {
  "body": Object {
    "contents": Array [
      Object {
        "encodings": Array [],
        "examples": Array [],
        "id": Any<String>,
        "mediaType": "content-a",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "deprecated": true,
          "x-stoplight": Object {
            "id": Any<String>,
          },
        },
      },
    ],
    "description": "descr",
    "id": Any<String>,
    "required": true,
  },
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [],
}
`;

exports[`translateOas3ToRequest given no request body should translate parameters 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [
    Object {
      "content": Object {
        "content-c": Object {
          "schema": Object {},
        },
      },
      "description": "descr",
      "examples": Array [],
      "id": Any<String>,
      "name": "param-name-3",
      "style": "simple",
    },
  ],
  "path": Array [],
  "query": Array [
    Object {
      "content": Object {
        "content-b": Object {
          "schema": Object {},
        },
      },
      "description": "descr",
      "examples": Array [],
      "id": Any<String>,
      "name": "param-name-2",
      "style": "form",
    },
    Object {
      "content": Object {
        "content-a": Object {
          "schema": Object {},
        },
      },
      "deprecated": true,
      "description": "descr",
      "examples": Array [],
      "id": Any<String>,
      "name": "param-name-1",
      "style": "form",
    },
  ],
}
`;

exports[`translateOas3ToRequest given path-defined parameters should create unique ids 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [
    Object {
      "content": Object {
        "content-a": Object {
          "schema": Object {},
        },
      },
      "deprecated": true,
      "description": "descr",
      "examples": Array [],
      "id": Any<String>,
      "name": "param-name-1",
      "style": "form",
    },
  ],
}
`;

exports[`translateOas3ToRequest given path-defined parameters should create unique ids 2`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [
    Object {
      "content": Object {
        "content-a": Object {
          "schema": Object {},
        },
      },
      "deprecated": true,
      "description": "descr",
      "examples": Array [],
      "id": Any<String>,
      "name": "param-name-1",
      "style": "form",
    },
  ],
}
`;
